--- a/renderer/dashboard.html
+++ b/renderer/dashboard.html
@@ -55,6 +55,12 @@
           </button>
           <ul class="dropdown-menu" id="reportEngineMenu"></ul>
         </div>
+        <div class="d-flex flex-column">
+          <label for="reportFormatSelect" class="form-label mb-1 small text-muted">Formato</label>
+          <select id="reportFormatSelect" class="form-select form-select-sm">
+            <option value="pdf">PDF</option>
+          </select>
+        </div>
         <button id="generateReportBtn" class="btn btn-success">Descargar reporte</button>
         <span id="reportEngineStatus" class="badge text-bg-secondary d-none"></span>
         <small id="reportEngineHelp" class="text-muted d-block">El reporte incluirá gráficas, totales y alertas de todas las POs seleccionadas.</small>
