Improve dashboard responsiveness and PDF layout

--- a/renderer/dashboard.html
+++ b/renderer/dashboard.html
@@ -302,7 +302,7 @@
         </div>
 
         <h3 class="h5 mb-3">Extensiones y consumo específico</h3>
-        <div id="extensionsContainer" class="row g-3 mb-4"></div>
+        <div id="extensionsContainer" class="extensions-grid mb-4"></div>
 
         <h3 class="h5 mb-2">Detalle de POs seleccionadas</h3>
         <div class="table-responsive">
