Simplify SSITEL report wording and letterheads

--- a/renderer/dashboard.html
+++ b/renderer/dashboard.html
@@ -48,7 +48,7 @@
                     <div>
                       <h3 class="h5 mb-1 text-success">Reporte universo de POs</h3>
                       <p class="text-muted mb-2">Genera un resumen global del total autorizado, consumo y remanente sin necesidad de seleccionar una PO base.</p>
-                      <p class="mb-1 small text-muted">Nombre comercial: <span id="universeCompanyLabel" class="fw-semibold">SITTEL</span></p>
+                      <p class="mb-1 small text-muted">Nombre comercial: <span id="universeCompanyLabel" class="fw-semibold">SSITEL</span></p>
                       <p class="mb-0 small text-muted">Empresa seleccionada: <span id="universeSelectedEmpresa" class="fw-semibold">Selecciona una empresa</span></p>
                     </div>
                     <div class="text-end">
@@ -91,7 +91,7 @@
                     </div>
                     <div class="col-12 col-md-8">
                       <label for="universeFileName" class="form-label">Nombre del archivo (opcional)</label>
-                      <input type="text" id="universeFileName" class="form-control" placeholder="universo_SITTEL">
+                      <input type="text" id="universeFileName" class="form-control" placeholder="universo_SSITEL">
                       <div class="form-text">No incluyas la extensión; se agregará automáticamente según el formato elegido.</div>
                     </div>
                   </div>
