--- a/renderer/report-settings.html
+++ b/renderer/report-settings.html
@@ -184,11 +184,11 @@
                   </div>
                   <div class="col-md-6">
                     <label for="brandingCompanyName" class="form-label">Nombre comercial a mostrar</label>
-                    <input type="text" id="brandingCompanyName" class="form-control" list="brandingCompanyNameOptions" placeholder="SITTEL">
+                    <input type="text" id="brandingCompanyName" class="form-control" list="brandingCompanyNameOptions" placeholder="SSITEL">
                     <datalist id="brandingCompanyNameOptions">
-                      <option value="SITTEL"></option>
-                      <option value="SITTEL, S.A. de C.V."></option>
-                      <option value="SITTEL Servicios"></option>
+                      <option value="SSITEL"></option>
+                      <option value="SSITEL, S.A. de C.V."></option>
+                      <option value="SSITEL Servicios"></option>
                     </datalist>
                     <div class="form-text">Este nombre aparecerá en los encabezados de los reportes PDF.</div>
                   </div>
