Remove Jasper reporting integration

--- a/renderer/dashboard.html
+++ b/renderer/dashboard.html
@@ -156,7 +156,7 @@
                         </div>
                         <span id="reportEngineStatus" class="badge text-bg-secondary d-none"></span>
                       </div>
-                      <small id="reportEngineHelp" class="text-muted d-block mt-3">Escoge el motor (Jasper o PDF directo) y el formato de exportación preferido.</small>
+                      <small id="reportEngineHelp" class="text-muted d-block mt-3">El motor disponible es "PDF directo". Elige el formato de exportación preferido.</small>
                     </div>
                   </div>
                 </div>
