--- a/renderer/report-settings.html
+++ b/renderer/report-settings.html
@@ -27,79 +27,14 @@
             <div class="d-flex justify-content-between align-items-center flex-wrap gap-2">
               <div>
                 <h1 class="h5 mb-0">Configuración de reportes</h1>
-                <p class="text-muted mb-0 small">Ajusta los motores de generación y la identidad visual de los reportes PDF.</p>
+                <p class="text-muted mb-0 small">Ajusta la exportación en PDF y CSV junto con la identidad visual del reporte.</p>
               </div>
-              <span id="jasperStatusBadge" class="badge text-bg-secondary">Sin verificar</span>
             </div>
           </div>
           <div class="card-body">
             <form id="reportSettingsForm" class="vstack gap-3">
-              <div>
-                <label for="defaultReportEngine" class="form-label">Motor predeterminado</label>
-                <select id="defaultReportEngine" name="defaultEngine" class="form-select"></select>
-              </div>
-              <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="jasperEnabled">
-                <label class="form-check-label" for="jasperEnabled">Habilitar JasperReports</label>
-              </div>
-              <div class="row g-3">
-                <div class="col-12">
-                  <label for="jasperCompiledDir" class="form-label">Directorio compilados (.jasper)</label>
-                  <div class="input-group">
-                    <input type="text" id="jasperCompiledDir" class="form-control" placeholder="C:\\Program Files\\porpt\\compiled">
-                    <button
-                      type="button"
-                      class="btn btn-outline-secondary"
-                      data-select-path
-                      data-select-target="jasperCompiledDir"
-                      data-select-type="directory"
-                    >Explorar…</button>
-                  </div>
-                  <div class="form-text">Ruta donde se guardarán los archivos <code>.jasper</code> compilados.</div>
-                </div>
-                <div class="col-12">
-                  <label for="jasperTemplatesDir" class="form-label">Directorio plantillas (.jrxml)</label>
-                  <div class="input-group">
-                    <input type="text" id="jasperTemplatesDir" class="form-control" placeholder="C:\\Program Files\\porpt\\templates">
-                    <button
-                      type="button"
-                      class="btn btn-outline-secondary"
-                      data-select-path
-                      data-select-target="jasperTemplatesDir"
-                      data-select-type="directory"
-                    >Explorar…</button>
-                  </div>
-                  <div class="form-text">Directorio que contiene las plantillas <code>.jrxml</code> de JasperReports.</div>
-                </div>
-                <div class="col-12">
-                  <label for="jasperFontsDir" class="form-label">Directorio de fuentes</label>
-                  <div class="input-group">
-                    <input type="text" id="jasperFontsDir" class="form-control" placeholder="C:\\Program Files\\porpt\\fonts">
-                    <button
-                      type="button"
-                      class="btn btn-outline-secondary"
-                      data-select-path
-                      data-select-target="jasperFontsDir"
-                      data-select-type="directory"
-                    >Explorar…</button>
-                  </div>
-                  <div class="form-text">Ubicación opcional de fuentes personalizadas usadas por Jasper.</div>
-                </div>
-                <div class="col-md-6">
-                  <label for="jasperReportName" class="form-label">Reporte predeterminado</label>
-                  <input type="text" id="jasperReportName" class="form-control" placeholder="poSummary">
-                  <div class="form-text">Nombre base del archivo <code>.jasper</code> que se ejecutará.</div>
-                </div>
-                <div class="col-md-6">
-                  <label for="jasperDataSource" class="form-label">Datasource JSON</label>
-                  <input type="text" id="jasperDataSource" class="form-control" placeholder="poSummaryJson">
-                  <div class="form-text">Identificador del datasource dentro del reporte Jasper.</div>
-                </div>
-                <div class="col-12">
-                  <label for="jasperJsonQuery" class="form-label">Consulta JSON</label>
-                  <input type="text" id="jasperJsonQuery" class="form-control" placeholder="summary.items">
-                  <div class="form-text">Ruta JSON usada por Jasper para leer los datos (por ejemplo <code>summary.items</code>).</div>
-                </div>
+              <div class="alert alert-info small mb-0">
+                El motor disponible es <strong>PDF directo</strong>, basado en <code>pdfkit</code>. Ajusta abajo los formatos de exportación y la personalización del contenido.
               </div>
               <div class="border rounded p-3 bg-body-tertiary">
                 <div class="row g-3 align-items-start">
